--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 body, html{
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     font-family: 'Ubuntu', sans-serif;
+    background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 }
 
 .navbar img{
@@ -15,11 +16,11 @@ body, html{
 }
 
 #aboutUs{
-    width:85%;
+    padding-top:1rem;
     margin:auto;
     display:block;
     border-radius: 5px;
-    background-color: rgb(187, 186, 186);
+    background: linear-gradient(to top, lightgrey 0%, lightgrey 1%, #e0e0e0 26%, #efefef 48%, #d9d9d9 75%, #bcbcbc 100%);
 }
 
 #usPhotos {
